--- a/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/implanters.yml
@@ -24,7 +24,7 @@
       name: Implant
       ejectOnBreak: true #Sunrise-Edit
       swap: false #Sunrise-Edit
-      locked: false #Sunrise-Edit
+      locked: True
       priority: 0
       whitelist:
         tags:
