Revert "Empty Implanter"

--- a/Resources/Prototypes/_Starlight/Entities/Objects/Misc/implanters.yml
+++ b/Resources/Prototypes/_Starlight/Entities/Objects/Misc/implanters.yml
@@ -32,10 +32,10 @@
     - type: Tag
       tags: []
 
-#- type: entity
-#  id: MagillitisSerumImplanter
-#  name: magillitis serum implanter
-#  parent: BaseImplantOnlyImplanterSyndi
-#  components:
-#    - type: Implanter
-#      implant: MagillitisSerumImplant
+- type: entity
+  id: MagillitisSerumImplanter
+  name: magillitis serum implanter
+  parent: BaseImplantOnlyImplanterSyndi
+  components:
+    - type: Implanter
+      implant: MagillitisSerumImplant
