Removing alert in aghost

--- a/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/admin_ghost.yml
@@ -90,6 +90,7 @@
     followEntity: true
   - type: CargoOrderConsole
   - type: CrewMonitoringConsole
+    doCorpseAlert: false
   - type: GeneralStationRecordConsole
     canDeleteEntries: true
   - type: DeviceNetwork
